--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,6 @@ header > button{
 
 /* estilos del main */
 
-/* main .politicas-p{
-    padding-left: 25em;
-    padding-right: 25em;
-} */
-
 main{
     flex: 1;
     text-align: center;
@@ -99,6 +94,17 @@ footer nav a{
     color: #EBE8C6;
 }
 
+/* mq tablet */
+
+@media (min-width: 576px) and (max-width:1024){
+
+    main .politicas-p{
+        padding-left: 25rem;
+        padding-right: 25rem;
+    } 
+
+}
+
 /* mq desktop */
 
 @media screen and (min-width: 1024px){
@@ -106,31 +112,37 @@ footer nav a{
     /* estilos del header */
     
     header .logo img{
-    width: 10rem;
-    height: 5rem;
+        width: 10rem;
+        height: 5rem;
     }
 
     header .estantes{
-    padding-right: 50rem;
-    column-gap:2rem
+        padding-right: 50rem;
+        column-gap:2rem
     }
     
     /* estilos del main */
+
+    main .politicas-p{
+        padding-left: 40rem;
+        padding-right: 40rem;
+    } 
+
     main .productos{
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: repeat(3, 10rem);
-    row-gap: 20rem;
-    column-gap: 0.2rem;
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: repeat(3, 10rem);
+        row-gap: 20rem;
+        column-gap: 0.2rem;
     }
 
     main .producto img{
-    width: 25rem;
-    height: 25rem;
-    border: 0.1rem solid #EBE8C6; 
+        width: 25rem;
+        height: 25rem;
+        border: 0.1rem solid #EBE8C6; 
     }
 
     main .carousel-item img{
-    height: 30rem;
+        height: 30rem;
     }
 }
