--- a/css/new-main.css
+++ b/css/new-main.css
@@ -58,6 +58,9 @@ main .productos img {
   height: 10rem;
   border: 0.2rem solid #EBE8C6;
 }
+main .productos img :hover {
+  transform: scale(2);
+}
 
 /* estilos del footer */
 footer {
@@ -104,7 +107,7 @@ main .productos img {
   border: 0.1rem solid #EBE8C6;
 }
 main .carousel-item img {
-  height: 30rem;
+  height: 45rem;
 }
 
 /*# sourceMappingURL=new-main.css.map */
