--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -64,7 +64,12 @@ main{
                 width: 10rem;
                 height: 10rem;
                 border: 0.2rem solid #EBE8C6;
+                :hover{
+                    transform: scale(2);
+                }
+                
             }
+            
     }
 }
 
@@ -131,7 +136,7 @@ footer{
         }
         .carousel-item{
             img{
-                height: 30rem;
+                height: 45rem;
             }
         }
     }
