--- a/css/main.css
+++ b/css/main.css
@@ -1,156 +1,122 @@
 /* reset */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* estilos generales */
-html,body{
-    height: 100%;
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  color: #EBE8C6;
+  background-color: #181818;
+  font-family: "Lilita One", sans-serif;
+  overflow-x: hidden;
 }
 
-body{
-    display: flex;
-    flex-direction: column;
-    color: #EBE8C6;
-    background-color: #181818;
-    font-family: "Lilita One", sans-serif;
-    overflow-x: hidden;
+/* estilos del header */
+header {
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  background: #181818;
 }
-
-/* estilos de header */
-header{
-    top: 0; 
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    background: #181818;
+header .mx-auto img {
+  width: 10rem;
+  height: 5rem;
 }
-   
-
-header .mx-auto img{
-    width: 10rem;
-    height: 5rem;
+header button {
+  position: absolute;
+  left: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
 }
-
-
-header > button{
-    position: absolute;
-    left: 1rem;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
 
 /* estilos del main */
-
-main{
-    flex: 1;
-    text-align: center;
+main {
+  flex: 1;
+  text-align: center;
 }
-
-main h1,main h2{
-    background-color: #4D0359;
-    font-style: italic;
-
+main h1, main h2 {
+  background-color: #4D0359;
+  font-style: italic;
+  margin-bottom: 4rem;
 }
-
-main .sub-pag{
-    margin-bottom: 4rem;
+main .sub-page {
+  margin-bottom: 4rem;
 }
-
-main h2{
-    margin-bottom: 4rem;
+main .carousel-item img {
+  height: 20rem;
+  padding-bottom: 4rem;
 }
-
-
-main .carousel-item img{
-    height: 20rem;
-    padding-bottom: 4rem;
+main .productos {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: repeat(5, 10rem);
+  row-gap: 4rem;
+  column-gap: 0.2rem;
 }
-
-main .productos{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: repeat(5, 10rem);
-    row-gap: 4rem;
-    column-gap: 0.2rem;
+main .productos .producto img {
+  width: 25rem;
+  height: 25rem;
+  border: 0.2rem solid #EBE8C6;
+  margin-bottom: 0.2rem;
 }
-
-main .producto img{
-    width: 10rem;
-    height: 10rem;
-    border: 0.2rem solid #EBE8C6;
-    margin-bottom: 0.2rem; 
-
-}
-
-main .producto img:hover{
+main .productos .producto img:hover {
   transform: scale(1.1);
   box-shadow: 5px 5px 5px 5px #4D0359;
   transition: 0.5s;
 }
 
-
 /* estilos del footer */
-
-footer{
-    background-color:#440351 ;
+footer {
+  background-color: #440351;
 }
-footer nav a{
-    color: #EBE8C6;
+footer nav a {
+  color: #EBE8C6;
 }
 
 /* mq tablet */
-
-@media (min-width: 576px) and (max-width:1024){
-
-    main .politicas-p{
-        padding-left: 25rem;
-        padding-right: 25rem;
-    } 
-
+@media (min-width: 576px) and (max-width: 1024) {
+  main .politicas-p {
+    padding-left: 25rem;
+    padding-right: 25rem;
+  }
 }
-
 /* mq desktop */
-
-@media screen and (min-width: 1024px){
-
-    /* estilos del header */
-    
-    header .logo img{
-        width: 10rem;
-        height: 5rem;
-    }
-
-    header .estantes{
-        padding-right: 50rem;
-        column-gap:2rem
-    }
-    
-    /* estilos del main */
-
-    main .politicas-p{
-        padding-left: 40rem;
-        padding-right: 40rem;
-    } 
-
-    main .productos{
-        display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
-        grid-template-rows: repeat(3, 10rem);
-        row-gap: 20rem;
-        column-gap: 0.2rem;
-    }
-
-    main .producto img{
-        width: 25rem;
-        height: 25rem;
-        border: 0.1rem solid #EBE8C6; 
-    }
-
-    main .carousel-item img{
-        height: 45rem;
-    }
+@media screen and (min-width: 1024px) {
+  /* estilos del header */
+  header .logo img {
+    width: 10rem;
+    height: 5rem;
+  }
+  header .estantes {
+    padding-right: 50rem;
+    column-gap: 2rem;
+  }
 }
+/* estilos del main */
+main .politicas-p {
+  padding-left: 40rem;
+  padding-right: 40rem;
+}
+main .productos {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: repeat(3, 10rem);
+  row-gap: 20rem;
+  column-gap: 0.2rem;
+}
+main .productos img {
+  width: 25rem;
+  height: 25rem;
+  border: 0.1rem solid #EBE8C6;
+}
+main .carousel-item img {
+  height: 45rem;
+}
+
+/*# sourceMappingURL=main.css.map */
