--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,12 @@
     //HOME
 @use "pages/home";
 
+    //FIGURAS
+@use "pages/figuras";
+
+    //LECTURA
+@use "pages/lectura";
+
     //POLITICAS
 @use "pages/politicas";
 
